--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     value="https://www.facebook.com/"
       />
         <div>
+        <div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Meta-Logo.png" width="140" />
         </div>
 
