--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     <input
     type="hidden"
     name="_redirect"
-    value="https://www.facebook.com/"
-      />
-        <div>
+    value="https://www.facebook.com/" />
         <div>
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Meta-Logo.png" width="140" />
         </div>
